--- a/setup.cfg
+++ b/setup.cfg
@@ -19,14 +19,16 @@ package_dir =
         = src
 scripts =
         scripts/benchgo
+        scripts/benchgo_spark
 packages = find:
 python_requires = >=3.6
 install_requires =
         pyyaml
         pyjson
         prometheus_api_client
+        pyspark
+        trino
         
-
 [options.packages.find]
 where = src
 
