added data generator and selective queries

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,8 @@ package_dir =
 scripts =
         scripts/benchgo
         scripts/benchgo_spark
+        scripts/mkdata
+
 packages = find:
 python_requires = >=3.6
 install_requires =
@@ -28,6 +30,8 @@ install_requires =
         prometheus_api_client
         pyspark
         trino
+        requests
+        boto3
         
 [options.packages.find]
 where = src
