--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = benchgo
-version = 0.1
+version = 0.2
 author = Jason Russler
 author_email = jason.russler@vastdata.com
 description = Benchmarking scripts and utls
@@ -20,7 +20,9 @@ package_dir =
 scripts =
         scripts/benchgo
         scripts/benchgo_spark
+        scripts/benchgo_spark.py
         scripts/mkdata
+        scripts/merge_tables
 
 packages = find:
 python_requires = >=3.6
